# aioftp

./: .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  .readthedocs.yaml  .ruff.toml  .travis.yml  MANIFEST.in  README.rst  doc-requirements.txt  flit.ini  ftpbench.py  history.rst  license.txt  nose.cfg  pyproject.toml  pytest.ini  readme.rst  run-tests.py  run-tests.sh  setup.cfg  setup.py  ssl.crt  ssl.key  test-requirements.txt  tests.py
.github/workflows/: cd.yml  ci-cd.yaml  ci-cd.yml  ci.yaml  ci.yml
aioftp/: __init__.py  __main__.py  client.py  common.py  errors.py  pathio.py  server.py  stream.py
docs/: Makefile  api.rst  client_api.rst  client_tutorial.rst  common_api.rst  conf.py  developer_tutorial.rst  index.rst  make.bat  path_io_api.rst  requirements.txt  server_api.rst  server_tutorial.rst
docs/_build/doctrees/: api.doctree  client_api.doctree  client_tutorial.doctree  environment.pickle  full_api.doctree  index.doctree  server_api.doctree  server_tutorial.doctree  user_api.doctree
docs/_build/html/: .buildinfo  api.html  client_api.html  client_tutorial.html  full_api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  server_api.html  server_tutorial.html  user_api.html
docs/_build/html/_sources/: api.txt  client_tutorial.txt  full_api.txt  index.txt  server_tutorial.txt  user_api.txt
docs/_build/html/_static/: alabaster.css
src/aioftp/: __init__.py  __main__.py  client.py  common.py  errors.py  pathio.py  server.py  types.py  utils.py
tests/: common.py  conftest.py  test-abort.py  test-connection.py  test-connection.py.nose  test-current-directory.py  test-directory-actions.py  test-extra.py  test-extra.py.nose  test-file.py  test-file.py.nose  test-ipv6.py  test-ipv6.py.nose  test-list-fallback.py  test-login.py  test-login.py.nose  test-maximum-connections.py  test-memory-path-io.py  test-memory-path-io.py.nose  test-pasv-fallback.py.nose  test-permissions.py  test-permissions.py.nose  test-repr.py  test-repr.py.nose  test-restart.py  test-simple-functions.py  test-simple-functions.py.nose  test-stats.py  test-stats.py.nose  test-throttle.py  test-timeouts.py  test-user.py  test_abort.py  test_client_side_socks.py  test_connection.py  test_corner_cases.py  test_current_directory.py  test_directory_actions.py  test_extra.py  test_file.py  (+12 more)
