[metadata]
name = aioftp
version = attr: aioftp.__version__
url = https://github.com/pohmelie/pypod-launcher
author = pohmelie
author_email = multisosnooley@gmail.com
description = ftp client/server for asyncio
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Topic :: Internet :: File Transfer Protocol (FTP)

[options]
packages = aioftp
python_requires = >= 3.5.3

[options.extras_require]
tests =
    pytest
    pytest-asyncio
    pytest-cov
    trustme
    async_timeout
