[metadata]
name = aioftp
version = attr: aioftp.__version__
url = https://github.com/aio-libs/aioftp
author = pohmelie
author_email = multisosnooley@gmail.com
description = ftp client/server for asyncio
long_description = file: README.rst
license = Apache-2.0
license_file = license.txt
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Topic :: Internet :: File Transfer Protocol (FTP)

[options]
packages = aioftp
python_requires = >= 3.11

[options.extras_require]
socks =
    siosocks >= 0.2.0
dev =
    alabaster
    async_timeout >= 4.0.0
    black
    docutils < 0.18.0
    mypy
    pre-commit
    pytest
    pytest-asyncio
    pytest-cov
    ruff
    siosocks
    sphinx
    trustme
